[package]
name = "ecology"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
tokio = { version = "1.37.0", features = [
    "fs",
    "rt",
    "rt-multi-thread",
    "macros",
    "io-util",
    "net"
] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
anyhow = "1.0.86"
tracing-opentelemetry = "0.23.0"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
dashmap = "5.5.3"
futures = "0.3.30"
log = "0.4.21"
